overflow in menu responsive fix.

--- a/src/stylesheets/elements/_dataTables.scss
+++ b/src/stylesheets/elements/_dataTables.scss
@@ -181,8 +181,13 @@ table.dataTable {
             }
         }
     }
-
-    
+    .overflow-menu{
+        .overflow-list{
+            li{
+                display: flex;
+            }
+        }
+    }
 }
 
 //Pagination button
